--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,16 @@
-.under-construction {
+.header {
   display: block;
+  margin: 0 auto;
+}
+
+.game {
+  display: block;
+  margin: 0 auto;
+}
+
+.google-badge {
+  display: block;
+  max-width: 200px;
+  max-height: 200px;
   margin: 0 auto;
 }
