--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 @media screen and (min-width:769px) {
-  .header {
+  .box {
+    margin-bottom:15px;
     display: block;
-    margin: 0 auto;
+    background-color: #FFFFFF;
+    border: 2px solid #D4D4D4; 
+    border-radius: 10px; 
+    box-shadow: 0 0 15px #A9A9A9;
+    padding:20px 40px;
   }
 
   .game {
@@ -18,19 +23,25 @@
 }
 
 @media only screen and (max-width: 768px) {
-.header {
+.box {
+    margin-bottom:10px;
     display: block;
-    margin: 0 auto;
     max-width: 769px;
+    background-color: #FFFFFF;
+    border: 2px solid #D4D4D4; 
+    border-radius: 10px; 
+    box-shadow: 0 0 15px #A9A9A9;
+    padding:20px 40px;
   }
 .game {
     display: block;
-    margin-left: 45%;
+    margin-left: -45%;
+    transform: scale(0.6);
   }
 .google-badge {
     display: block;
     max-width: 300px;
     max-height: 300px;
-    margin-left: 70%;
+    //margin-left: 70%;
   }
 }
